Replace get/set in IOAnnotatedList with public member vars.